--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,11 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+
+h1 {
+    font-style: italic;
+}
+
 p {
     font-size: 1.5em;
     line-height: 1.4em;
