--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,11 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 <p class="meta">{{ page.date | date_to_string }}</p>
+<article id="page">
+	
+  {{ content }}
+
+</article>
 
 <div class="post">
   {{ content }}
