--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<title>{{ Erika.Chunzho }}</title>
-			<!-- link to main stylesheet -->
+			<title>{{ page.title }}</title>
+			
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
@@ -18,7 +18,7 @@
 			
 			{{ content }}
 			
-			</div><!-- /.container -->
+			</div>
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:erikac2875@afsenyc.org">email</a></li>
