--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,10 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+.fstPage {
+    background-image:url("https://lawrencecheng123.github.io/Seattle.jpg");
+    /*background-color: lightgray;*/
+    height: 700px;
+    width:100%;
+    background-size:cover;
+}
