--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ ul.posts li {
     list-style: none;
 }
  .fstPage {
-    background-image:url("https://lawrencecheng123.github.io/Seattle.jpg");
+    background-image:url("http://www.lovethispic.com/uploaded_images/18872-Colorful-Sunset-Over-The-Ocean.jpg");
     /*background-color: lightgray;*/
     height: 700px;
     width:100%;
