--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ ul.posts li {
     list-style: none;
 }
  .fstPage {
-    background-image:url("http://www.lovethispic.com/uploaded_images/18872-Colorful-Sunset-Over-The-Ocean.jpg");
+    background-image:url("https://oxfordmartin.imgix.net/_originals/sustainable_oceans_AdobeStock_watoson.jpg?w=1140&h=488&fit=crop");
     /*background-color: lightgray;*/
     height: 700px;
     width:100%;
