--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ ul.posts li {
     list-style: none;
 }
  .fstPage {
-    background-image:url("https://oxfordmartin.imgix.net/_originals/sustainable_oceans_AdobeStock_watoson.jpg?w=1140&h=488&fit=crop");
+    background-image:url("https://s3.envato.com/files/106405422/sunrise_bird_590x332.jpg");
     /*background-color: lightgray;*/
     height: 300px;
     width:100%;
