--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ ul.posts li {
     background-size:cover;
 }
 }
- .Post {
+ .post {
     background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOrNjdPuRk4u_w8Qf0DASXH09rLJTtnbika6Nq6EsiO7VVdVjkLg");
     /*background-color: lightgray;*/
     height: 400px;
